--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,8 @@
   <link href="/assets/img/icon.png" rel="icon">
   <link href="/assets/img/icon.png" rel="apple-touch-icon">
 
+  <link rel="manifest" href="/manifest.json">
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
